Arreglado: ffmpeg ya no imprime información de los archivos en consula y arreglados los warnings en la compilación