@@ -48,6 +48,6 @@ echo  Compilacion exitosa!
 echo  JAR generado en: target\MediaViewer-2.0.jar
 echo.
 echo  Ejecutando la aplicacion...
-java -jar target\MediaViewer-2.0.jar
+java --enable-native-access=ALL-UNNAMED -jar target\MediaViewer-2.0.jar
 
 pause
